# los_ultramarinos_receptionist

./: CMakeLists.txt  README.md  package.xml
behavior_trees_xml/: Centrar.xml  Tree_Main.xml  the_recepcionist.xml
include/behavior_tree/: ControlDataTR.h  ControlDumpTR.h  ControlObservadorTR.h  DataCheckTR.h  DataDumpTR.h  Navegar2TR.h  Navegar3TR.h  NavegarTR.h  ObservarTR.h  PutaMierda.h
include/the_receptionist/: DialogInterfaceTR.h  MonologoDF.h
launch/: Carry_My_Luggage.launch  Find_My_Mates.launch  Seguir.launch
src/: The_Receptionist.cpp
src/behavior_tree_nodes/: ControlDataTR.cpp  ControlDumpTR.cpp  ControlObservadorTR.cpp  DataCheckTR.cpp  DataDumpTR.cpp  Navegar2TR.cpp  Navegar3TR.cpp  NavegarTR.cpp  ObservarTR.cpp  PutaMierda.cpp
src/the_receptionist/: DialogInterfaceTR.cpp  ObservadorPersonasTR.cpp  TextToSpeechTR.cpp  angleCalcTR.cpp  data_collectorTR.cpp
